--- a/style.css
+++ b/style.css
@@ -10,19 +10,40 @@ body {
   height: 100vh;
 }
 
+header {
+  height: 125px;
+  padding-bottom: 5px;
+}
+
+header button {
+  color: #111;
+  border: 1px solid #111;
+  margin: 5px 10px;
+  font-size: 1.2em;
+  text-decoration: none;
+  background: #fafafa;
+  padding: 7.5px 25px;
+  border-radius: 15px;
+  align-self: flex-end;
+}
+
+header a:hover {
+  opacity: 0.85;
+}
+
 header,
 footer {
-  height: 100px;
   background: lightgray;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 main {
   position: relative;
-  background: linear-gradient(lightgray, rgb(41, 41, 28));
-  height: calc(100vh - 200px);
+  background: linear-gradient(rgb(211, 211, 211), rgb(41, 41, 28));
+  height: calc(100vh - 175px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,20 +52,18 @@ main {
 
 section {
   position: relative;
-  padding: 50px;
-  height: 60%;
+  height: 80%;
   min-height: 480px;
   width: 80%;
-  max-width: 1024px;
+  max-width: 400px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   z-index: 0;
   color: #111;
-  box-shadow: 0px 0px 100px #333;
-  border-radius: 5px solid red;
+  border: 1px solid #111;
 }
 
 .section-background {
@@ -61,21 +80,22 @@ section {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 1.6em;
   font-weight: 600;
+  text-align: center;
+  margin: 20px 20px 0 20px;
 }
 
 .conversion {
-  padding: 30px;
   height: 40%;
-  width: 70%;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .conversion i {
-  font-size: 1.6em;
+  font-size: 1.4em;
 }
 
 input {
@@ -85,7 +105,7 @@ input {
   font-size: 1.4em;
   margin: 10px 0;
   border-radius: 5px;
-  border: 1px solid #999;
+  border: 1px solid #111;
   outline: none;
   background: rgb(233, 233, 233);
 }
@@ -104,7 +124,7 @@ input:focus {
 .kg label,
 .lbs label {
   position: absolute;
-  top: -35px;
+  top: -30px;
   font-size: 1.6em;
 }
 
@@ -116,12 +136,13 @@ a {
 }
 
 .convert-reset {
-  margin-top: -50px;
+  margin-bottom: 25px;
 }
 
 .convert-reset button {
-  height: 57.34px;
-  margin: 0 10px;
+  height: 45px;
+  margin: 10px;
+  border: 1px solid #111;
 }
 
 .convert-reset button i {
@@ -138,7 +159,7 @@ a {
 
 .convert-reset button:last-child {
   border-radius: 50%;
-  width: 57.34px;
+  width: 45px;
   background: linear-gradient(#fff, lightgray);
 }
 
@@ -153,20 +174,10 @@ button:hover {
 
 footer {
   background: rgb(41, 41, 28);
-}
-
-header button {
-  color: #111;
-  margin: 0 10px;
-  font-size: 1.6em;
-  text-decoration: none;
-  background: #fafafa;
-  padding: 10px 20px;
-  border-radius: 15px;
-}
-
-header a:hover {
-  opacity: 0.85;
+  height: 50px;
+  align-items: flex-start;
+  font-size: 0.95em;
+  padding-top: 5px;
 }
 
 button#swap {
@@ -174,17 +185,48 @@ button#swap {
   padding: 5px 17.5px;
   border-radius: 5px;
   margin: 0 10px;
+  border: 1px solid #111;
 }
 
 .conversion > i {
   margin: 0 10px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  header button {
+    font-size: 1.4em;
+  }
+
+  #convert {
+    height: 60px;
+  }
+
+  #reset {
+    height: 60px;
+    width: 60px;
+  }
+
+  input {
+    height: 50px;
+    width: 250px;
+  }
+
+  .conversion {
+    margin-top: 25px;
+  }
+
+  .conversion i {
+    font-size: 1.8em;
+  }
+}
+
+/* @media screen and (max-width: 480px) {
   header {
-    justify-content: space-around;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     height: 20%;
+    padding: 10px 0;
   }
 
   main {
@@ -195,6 +237,7 @@ button#swap {
 
   header button {
     font-size: 1.2em;
+    margin: 0 10px;
   }
 
   footer {
@@ -232,6 +275,7 @@ button#swap {
     box-shadow: 0 0 2px rgb(119, 119, 119);
     border-radius: 5px solid red;
     min-width: 256px;
+    margin-top: -10px;
   }
 
   .convert-reset {
@@ -239,7 +283,7 @@ button#swap {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
   }
 
   .convert-reset #convert,
@@ -250,4 +294,8 @@ button#swap {
   .convert-reset #reset {
     width: 50px;
   }
-}
+
+  button#swap {
+    font-size: 0.75em;
+  }
+} */
